<resources>
    <string name="app_name">AriPro</string>
    <string name="profile">Profil</string>
    <string name="qo_ng_iroq">Qo\'ng\'iroq</string>
    <string name="chat">Chat</string>
    <string name="telegram">Telegram</string>
    <string name="agar_ilova_bilan_ishlashda_muammoga_duch_kelsangiz_bizga_murojaat_qiling">Agar ilova bilan ishlashda muammoga duch kelsangiz, bizga murojaat qiling</string>
    <string name="biz_bilan_aloqa">Biz bilan aloqa</string>
    <string name="platforma_tilini_o_zgaritirishni_hohlaysizmi">Platforma tilini o`zgaritirishni hohlaysizmi?</string>
    <string name="uzbek">Uzbek</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="saqlash">Saqlash</string>
    <string name="akkauntdan_chiqishni_xohlaysizmi">Akkauntdan chiqishni xohlaysizmi?</string>
    <string name="chiqish">Chiqish</string>
    <string name="sizning_buyurtmangiz_bekor_qilindi">Sizning buyurtmangiz bekor qilindi</string>
    <string name="biz_doimo_yaxshilanishga_intilamiz_va_kelgusi_safar_sizga_yanada_yaxshi_xizmat_ko_rsatamiz_degan_umiddamiz">Biz doimo yaxshilanishga intilamiz va kelgusi safar sizga yanada yaxshi xizmat ko‘rsatamiz degan umiddamiz!</string>
    <string name="buyurtmangiz_bekor_qilinganidan_afsusdamiz">Buyurtmangiz bekor qilinganidan afsusdamiz 😔</string>
    <string name="davom_etish">Davom etish</string>
    <string name="profilingizdagi_ma_lumotni_o_zgartirishda_xatolik_yuz_berdi">Profilingizdagi ma`lumotni o’zgartirishda xatolik yuz berdi</string>
    <string name="profilingizdagi_ma_lumot_o_zgartirildi">Profilingizdagi ma`lumot o`zgartirildi</string>
    <string name="batafsil_ma_lumot">Batafsil ma`lumot</string>
    <string name="o_tkazish">O\'tkazish</string>
    <string name="qabul_qilish">Qabul qilish</string>
    <string name="to_lovni_tasdiqlash">To\'lovni tasdiqlash</string>
    <string name="yangi_hujjatni_yuklang_pdf_yoki_jpeg">Yangi hujjatni yuklang (pdf yoki jpeg)</string>
    <string name="kamerani_oching_rasmga_oling">Kamerani oching rasmga oling</string>
    <string name="hisobingiz">Hisobingiz</string>
    <string name="faol">Faol</string>
    <string name="nofaol">Nofaol</string>
    <string name="boshqa_yuklar">Boshqa yuklar</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="profil_ma_lumoti">Profil ma`lumoti</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="ish_vaqti">Ish vaqti</string>
    <string name="til_tanlash">Til tanlash</string>
    <string name="bog_lanish">Bog`lanish</string>
    <string name="hisobdan_chiqish">Hisobdan chiqish</string>
    <string name="buyurtmani_bekor_qilish">Buyurtmani bekor qilish</string>
    <string name="boshqa_sabab">Boshqa sabab</string>
    <string name="xabar_yozing">Xabar yozing...</string>
    <string name="kodni_qayta_yuborish">Kodni qayta yuborish:</string>
    <string name="raqam_o_zgartirish">Raqam o`zgartirish</string>
    <string name="ari_platformasiga_ga_xush_nkelibsiz">Ari platformasiga ga xush \nkelibsiz!</string>
    <string name="kerakli_bo_lgan_manzillarni_biz_bilan_toping">Kerakli bo’lgan manzillarni biz bilan toping</string>
    <string name="yuqori_baholangan_joylarni_osongina_toping">Yuqori baholangan joylarni osongina toping</string>
    <string name="manzilingiz_haqida_barcha_ma_lumotlar">Manzilingiz haqida barcha ma’lumotlar</string>
    <string name="xaritalar_orqali_manzilni_qiyinchiliklarsiz_topish">Xaritalar orqali manzilni qiyinchiliklarsiz topish</string>
    <string name="kirish">Kirish</string>
    <string name="tilni_tanlang">Tilni tanlang</string>
    <string name="tilni_keyinchalik_o_zgartirishingiz_ham_mumkun">Tilni keyinchalik o`zgartirishingiz ham mumkun</string>
    <string name="telefon_raqamingizni_kiriting">Telefon raqamingizni kiriting</string>
    <string name="yetkazish">Yetkazish</string>
    <string name="buyurtma">Buyurtma</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="internet_mavjud_emas_ltimos_tekshirib_ko_ring">Internet mavjud emas, iltimos tekshirib ko\'ring</string>
    <string name="bildirishnoma">Bildirishnoma</string>
    <string name="qidiruv">Qidiruv</string>
    <string name="iltimos_buyurtmachini_baholang">Iltimos Buyurtmachini baholang</string>
    <string name="izoh_qoldiring">Izoh qoldiring</string>
    <string name="yetkazib_berish_vaqti">Yetkazib berish vaqti</string>
    <string name="batafsil">Batafsil</string>
    <string name="kartaga_yo_naltirish">Kartaga yo\'naltirish</string>
    <string name="buyurtma_bekor_qilish">Buyurtma bekor qilish</string>
    <string name="ro_yhat">Ro`yhat</string>
    <string name="rahmat_buyurtma_yakunlandi">Rahmat! Buyurtma yakunlandi!</string>
    <string name="yetkazish_tafsilotlari">Yetkazish tafsilotlari</string>
    <string name="sizning_ro_yhatingiz_bo_sh">Sizning ro\'yhatingiz bo\'sh</string>
    <string name="sizda_hozir_buyurtmalar_mavjud_emas">Sizda hozir buyurtmalar mavjud emas</string>

</resources>