<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingTop="16dp"
    android:background="@color/mainBgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welocome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welocome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_family"
            android:gravity="center"
            android:text="@string/ari_platformasiga_ga_xush_nkelibsiz"
            android:textColor="@color/text_color_bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager" />

        <TextView
            android:id="@+id/neededLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font_family_medium"
            android:gravity="center"
            android:text="@string/kerakli_bo_lgan_manzillarni_biz_bilan_toping"
            android:textColor="@color/gray500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welocome" />

        <LinearLayout
            android:id="@+id/containerMake"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/mainBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neededLocation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_intro_rating" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_family_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/yuqori_baholangan_joylarni_osongina_toping"
                    android:textColor="@color/text_color_bold"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line_back"
            app:layout_constraintEnd_toEndOf="@id/containerMake"
            app:layout_constraintStart_toStartOf="@id/containerMake"
            app:layout_constraintTop_toBottomOf="@id/containerMake" />

        <LinearLayout
            android:id="@+id/containerLocationInfo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/mainBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerMake">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_intro_address_info" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_family_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/manzilingiz_haqida_barcha_ma_lumotlar"
                    android:textColor="@color/text_color_bold"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line_back"
            app:layout_constraintEnd_toEndOf="@id/containerLocationInfo"
            app:layout_constraintStart_toStartOf="@id/containerLocationInfo"
            app:layout_constraintTop_toBottomOf="@id/containerLocationInfo" />


        <LinearLayout
            android:id="@+id/containerLocationWithMap"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/mainBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerLocationInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_intro_map" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_family_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/xaritalar_orqali_manzilni_qiyinchiliklarsiz_topish"
                    android:textColor="@color/text_color_bold"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line_back"
            app:layout_constraintEnd_toEndOf="@id/containerLocationWithMap"
            app:layout_constraintStart_toStartOf="@id/containerLocationWithMap"
            app:layout_constraintTop_toBottomOf="@id/containerLocationWithMap" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_style_button"
            android:fontFamily="@font/font_family_medium"
            android:text="@string/kirish"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/containerLocationWithMap" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>